# app-finder

./: Cargo.toml  README.md
src/: lib.rs
src/platform/: macos.rs  mod.rs  windows.rs
