[package]
edition = "2021"
name    = "app-finder"
version = "0.1.0"

[dependencies]
anyhow      = { workspace = true }
base64      = { workspace = true }
env_logger  = { workspace = true }
lazy_static = { workspace = true }
log         = { workspace = true }
serde       = { workspace = true }
sysinfo     = { workspace = true }


[target.'cfg(target_os = "macos")'.dependencies]
icns  = "0.3.1"
plist = "1.7.0"


[target.'cfg(target_os = "windows")'.dependencies]
image = "0.25.5"
lnk = "0.5.1"
widestring = "1.1.0"
windows = { version = "0.58.0", features = [
	"Win32_Foundation",
	"Win32_Graphics",
	"Win32_Graphics_Gdi",
	"Win32_Security",
	"Win32_Storage_FileSystem",
	"Win32_UI_Controls",
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging"
] }
winreg = "0.52.0"

[dev-dependencies]
ctor     = "0.2.9"
netstat2 = "0.11"
