[package]
name = "app-finder"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A cross-platform Rust library designed to help retrieve information about installed applications on various operating systems."
repository = "https://github.com/aihui999/app-finder"
keywords = ["installed-app", "app-finder", "app", "installed", "finder"]

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
sysinfo = "0.33.0"


[target.'cfg(target_os = "macos")'.dependencies]
icns = "0.3.1"
plist = "1.7.0"


[target.'cfg(target_os = "windows")'.dependencies]
image = "0.25.5"
lnk = "0.5.1"
widestring = "1.1.0"
windows = { version = "0.58.0", features = [
	"Win32_Foundation",
	"Win32_Graphics",
	"Win32_Graphics_Gdi",
	"Win32_Security",
	"Win32_Storage_FileSystem",
	"Win32_UI_Controls",
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging",
] }
winreg = "0.52.0"

[dev-dependencies]
ctor = "0.2.9"
netstat2 = "0.11"
